[package]
name = "ising_lib"
description = "Tools for simulating Ising model."
keywords = ["ising", "physics", "simulation"]
categories = ["science", "simulation"]
version = "0.1.0"
authors = ["micouy <szpontaniczny@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/micouy/ising_lib"

[badges]
travis-ci = { repository = "micouy/ising_lib" }

[dependencies]
ndarray = "^0.12"
rand = "^0.6"

[dev-dependencies]
pretty_assertions = "^0.6"
chrono = "^0.4"
pbr = "^1.0"
rayon = "^1.0"
criterion = "0.2"

[[bench]]
name = "lattice"
harness = false
